--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ version: 1.0.0
 homepage: https://github.com/PonnamKarthik/reorderableitemsview
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view: ^0.3.0
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
